[gd_scene load_steps=7 format=3 uid="uid://6opqqud0ep51"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_s4ibk"]
[ext_resource type="Script" path="res://scenes/settings/key_binding_settings/key_binding_listener/key_binding_listener.gd" id="2_o17ok"]

[sub_resource type="InputEventAction" id="InputEventAction_hbj61"]
action = &"ui_confirm_default"

[sub_resource type="Shortcut" id="Shortcut_nbyvs"]
events = [SubResource("InputEventAction_hbj61")]

[sub_resource type="InputEventAction" id="InputEventAction_itjlh"]
action = &"ui_cancel_default"

[sub_resource type="Shortcut" id="Shortcut_7olho"]
events = [SubResource("InputEventAction_itjlh")]

[node name="KeyBindingListener" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s4ibk")
theme_type_variation = &"PanelDimBackground"
script = ExtResource("2_o17ok")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -293.0
offset_top = -86.5
offset_right = 293.0
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "@BIND"

[node name="ActionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelLarge"
theme_override_colors/font_outline_color = Color(0.67, 0.524833, 0, 1)
text = "<ACTION>
"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelDimBlue"

[node name="InputLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "@KEY_BINDING_INSTRUCTION"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ButtonRed"
shortcut = SubResource("Shortcut_nbyvs")
text = "@CONFIRM"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_7olho")
text = "@CANCEL"
